BUG (settings): fix close button that is too big on modal

--- a/core/src/css/component/settings/modal/modal-video-settings-changed.component.scss
+++ b/core/src/css/component/settings/modal/modal-video-settings-changed.component.scss
@@ -1,84 +1,93 @@
 .modal-video-settings-changed {
-    background: radial-gradient(94.76px at 50% 50%, rgba(142, 91, 35, 0.7) 0%, rgba(102, 58, 26, 0.7) 0%, rgba(47, 13, 13, 0.7) 100%),  url('/Files/assets/images/backgrounds/settings-modal-bg.png');
-    border: 1px solid #472406;
-    box-sizing: border-box;
-    width: 325px;
-    height: 210px;
-    padding: 20px;
-    position: relative;
+	background: radial-gradient(
+			94.76px at 50% 50%,
+			rgba(142, 91, 35, 0.7) 0%,
+			rgba(102, 58, 26, 0.7) 0%,
+			rgba(47, 13, 13, 0.7) 100%
+		),
+		url('/Files/assets/images/backgrounds/settings-modal-bg.png');
+	border: 1px solid #472406;
+	box-sizing: border-box;
+	width: 325px;
+	height: 210px;
+	padding: 20px;
+	position: relative;
 
-    .close-button {
-        position: absolute;
-        top: 0;
-        right: 0;
-        --icon-color: #D9C3AB;
+	.close-button {
+		position: absolute;
+		top: 0;
+		right: 0;
+		width: 30px;
+		height: 30px;
+		--icon-color: #d9c3ab;
 
-        &:hover {
-            background: #D9C3AB;
-            --icon-color: #2F0D0D;
-            color: #2F0D0D;
-        }
-    }
+		&:hover {
+			background: #d9c3ab;
+			--icon-color: #2f0d0d;
+			color: #2f0d0d;
+		}
+	}
 
-    .title {
-        font-family: Open Sans;
-        font-style: normal;
-        font-weight: 600;
-        line-height: normal;
-        font-size: 14px;        
-        color: #D9C3AB;
-        margin-bottom: 10px;
-    }
+	.title {
+		font-family: Open Sans;
+		font-style: normal;
+		font-weight: 600;
+		line-height: normal;
+		font-size: 14px;
+		color: #d9c3ab;
+		margin-bottom: 10px;
+	}
 
-    p {
-        font-family: Open Sans;
-        font-style: normal;
-        font-weight: normal;
-        line-height: normal;
-        font-size: 14px;
-        color: #A89782;
-    }
+	p {
+		font-family: Open Sans;
+		font-style: normal;
+		font-weight: normal;
+		line-height: normal;
+		font-size: 14px;
+		color: #a89782;
+	}
 
-    .buttons {
-        display: flex;
-        justify-content: flex-end;
-        margin-top: 30px;
+	.buttons {
+		display: flex;
+		justify-content: flex-end;
+		margin-top: 30px;
 
-        button, a {
-            height: 30px;
-            font-family: Open Sans;
-            font-style: normal;
-            font-weight: normal;
-            line-height: normal;
-            font-size: 13px;
-            margin-left: 10px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            margin-top: 0;
-        }
+		button,
+		a {
+			height: 30px;
+			font-family: Open Sans;
+			font-style: normal;
+			font-weight: normal;
+			line-height: normal;
+			font-size: 13px;
+			margin-left: 10px;
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			margin-top: 0;
+		}
 
-        a {
-            width: 110px;
-            background: transparent;
-            color: #A89782;
-            border: 1px solid #A89782;
-            box-sizing: border-box;
+		a {
+			width: 110px;
+			background: transparent;
+			color: #a89782;
+			border: 1px solid #a89782;
+			box-sizing: border-box;
 
-            &:hover {
-                background: #2F0D0D;
-            }
-        }
+			&:hover {
+				background: #2f0d0d;
+			}
+		}
 
-        button {
-            width: 80px;
-            background: #D9C3AB;
-            color: #2F0D0D;
+		button {
+			width: 80px;
+			background: #d9c3ab;
+			color: #2f0d0d;
 
-            &:hover {
-                background: #FFB948;
-                color: #2F0D0D;
-            }
-        }
-    }
+			&:hover {
+				background: #ffb948;
+				color: #2f0d0d;
+			}
+		}
+	}
 }
